--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "homepage": "https://github.com/Lelith/adventofcode19#readme",
   "dependencies": {
-    "eslint": "6.1.0"
+    "eslint": "7.14.0"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "18.0.1",
-    "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "1.7.0"
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0"
   }
 }
