--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   },
   "homepage": "https://github.com/Lelith/adventofcode19#readme",
   "dependencies": {
-    "eslint": "7.14.0"
+    "eslint": "7.14.0",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
-    "eslint-plugin-import": "^2.22.1",
     "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "7.21.5",
     "eslint-plugin-react-hooks": "4.2.0"
